appid-integration-ra.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "ews-jwt-auth"
spec:
  jwtRules:
  - issuer: "https://us-south.appid.cloud.ibm.com/oauth/v4/587ec275-3d25-44bf-a853-0bb69bc9c584"
    jwksUri: "https://us-south.appid.cloud.ibm.com/oauth/v4/587ec275-3d25-44bf-a853-0bb69bc9c584/publickeys"
