external-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: event-external-vs
spec:
  hosts:
    - "<external-hostname>"
  gateways:
    - ews-api-gateway
  http:
    - name: "clientletter-route"
      match:
        - uri:
            prefix: /events/api/clientletter
        - uri:
            prefix: /events/api/v2/clientletter
      route:
        - destination:
            port:
              number: 3030
            host: event-client-letter-service
    - name: "bandinfo-route"
      match:
        - uri:
            prefix: /events/api/band
      route:
        - destination:
            port:
              number: 8080
            host: event-bandinfo-service
    - name: "activity-route"
      match:
        - uri:
            prefix: /events/api/activity/management
      route:
        - destination:
            port:
              number: 8080
            host: event-activity-management-service
    - name: "registration-route"
      match:
        - uri:
            prefix: /events/api/registration
      route:
        - destination:
            port:
              number: 8080
            host: event-registration-service
    - name: "opportunity-route"
      match:
        - uri:
            prefix: /events/api/opportunity
      route:
        - destination:
            port:
              number: 8080
            host: event-opportunity-data-service
    - name: "russian-route"
      match:
        - uri:
            prefix: /events/api/russian
      route:
        - destination:
            port:
              number: 8080
            host: event-russianapi-service
    - name: "invitee-service"
      match:
        - uri:
            prefix: /events/api/invitee
      route:
        - destination:
            port:
              number: 8080
            host: event-invitee-service
