authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-external
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
    - to:
      - operation:
          paths: ["/events/api/*"]
      when:
      - key: request.auth.claims[iss]
        values: ["https://us-south.appid.cloud.ibm.com/oauth/v4/<appid-tenant-id>"]
